--- a/index.html
+++ b/index.html
@@ -13,11 +13,22 @@
 
 
     <script>
+      var firebaseConfig = {
+    apiKey: "AIzaSyDBz2z-dIobtz1sGwOTR4Z8eh1Ecy2XneQ",
+    authDomain: "carracing-ab4c7.firebaseapp.com",
+    databaseURL: "https://carracing-ab4c7-default-rtdb.firebaseio.com",
+    projectId: "carracing-ab4c7",
+    storageBucket: "carracing-ab4c7.appspot.com",
+    messagingSenderId: "226091648521",
+    appId: "1:226091648521:web:126c9cfeeec04b2b181ad8",
+    measurementId: "G-YX1MKJXWMZ"
+  };
       // Your web app's Firebase configuration
       //Add here
       // Initialize Firebase
       firebase.initializeApp(firebaseConfig);
     </script>
+
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
